# nyas

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  build.sh
src/: azdo.h  main.cpp  nyas.cpp  nyas.h  nyas_math.cpp  nyas_math.h  nyas_mesh.cpp  nyas_platform.h  nyas_render.h  nyas_render_gl.cpp  nyas_shader.cpp  nyas_texture.cpp  nyas_texture.h  nyas_types.h  nyconfig.h  resources.h  texpack.h
